--- a/Photography_Portfolio/Minimal/main.html
+++ b/Photography_Portfolio/Minimal/main.html
@@ -16,7 +16,7 @@
 		<nav>
 			<a href="">Home</a>
 			<a href="#photography">Photography</a>
-			<a href="contact/contact_info_iframe.html?S=1&ID=1a2be7&P=4085960519&E=etchelepi@gmail.com" target="content">About</a>
+			<a href="contact/contact_info_iframe.html?S=1&ID=1a2be7&P=4085555555&E=evan@photo.com" target="content">About</a>
 		</nav>
 	<footer>
 
